@@ -5,6 +5,8 @@ Distributed under the GPL v3 or later
 Version <unreleased>
 
 - Support new live radio URLs containing /podcastit/
+- --restrict-filename-no-spaces avoids spaces in generated filenames
+- --restrict-filename-no-specials generates Windows-compatible filenames (alias for --vfat)
 
 Version 20220830
 
